<resources>
    <string name="app_name" translatable="false">KeyBoardExample</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="name2_hint">Second Name</string>
    <string name="uri_hint">Site Address</string>
    <string name="password_repeat_hint">Repeat password</string>
    <string name="e_mail_hint" translatable="false">E-mail</string>
    <string name="info_hint" translatable="false">!</string>
    <string name="extra_hint" translatable="false">$</string>
    <string name="about_hint">About</string>
    <string name="surname_hint">Surname</string>
</resources>