<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="8dp"
        android:inputType="textPersonName"
        android:hint="@string/name_hint"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPersonName2"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name2_hint"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPersonSurname"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/surname_hint"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextTextPersonSite"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:hint="@string/uri_hint"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPersonPassword"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:importantForAutofill="no" />

    <EditText
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_repeat_hint"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPersonEmail"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail_hint"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPersonInfo"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/info_hint"
        android:importantForAutofill="no" />

    <EditText
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/extra_hint"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/about_hint"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />


</LinearLayout>